--- a/source/task2/dnn_accel_system/dnn_accel_system.cmp
+++ b/source/task2/dnn_accel_system/dnn_accel_system.cmp
@@ -15,13 +15,7 @@
 			sdram_ras_n       : out   std_logic;                                        -- ras_n
 			sdram_we_n        : out   std_logic;                                        -- we_n
 			sdram_clk_clk     : out   std_logic;                                        -- clk
-			switches_export   : in    std_logic_vector(7 downto 0)  := (others => 'X'); -- export
-			vga_vga_blu       : out   std_logic_vector(7 downto 0);                     -- vga_blu
-			vga_vga_clk       : out   std_logic;                                        -- vga_clk
-			vga_vga_grn       : out   std_logic_vector(7 downto 0);                     -- vga_grn
-			vga_vga_hsync     : out   std_logic;                                        -- vga_hsync
-			vga_vga_red       : out   std_logic_vector(7 downto 0);                     -- vga_red
-			vga_vga_vsync     : out   std_logic                                         -- vga_vsync
+			switches_export   : in    std_logic_vector(7 downto 0)  := (others => 'X')  -- export
 		);
 	end component dnn_accel_system;
 
